src/test/ui/async-await/partial-drop-partial-reinit.stderr
error[E0277]: `NotSend` cannot be sent between threads safely
  --> $DIR/partial-drop-partial-reinit.rs:6:16
   |
LL |     gimme_send(foo());
   |     ---------- ^^^^^ `NotSend` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
...
LL | async fn foo() {
   |                - within this `impl Future<Output = ()>`
   |
   = help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `NotSend`
   = note: required because it appears within the type `(NotSend,)`
   = note: required because it appears within the type `{ResumeTy, (NotSend,), impl Future<Output = ()>, ()}`
   = note: required because it appears within the type `[static generator@$DIR/partial-drop-partial-reinit.rs:22:16: 27:2]`
   = note: required because it appears within the type `from_generator::GenFuture<[static generator@$DIR/partial-drop-partial-reinit.rs:22:16: 27:2]>`
   = note: required because it appears within the type `impl Future<Output = [async output]>`
   = note: required because it appears within the type `impl Future<Output = ()>`
note: required by a bound in `gimme_send`
  --> $DIR/partial-drop-partial-reinit.rs:10:18
   |
LL | fn gimme_send<T: Send>(t: T) {
   |                  ^^^^ required by this bound in `gimme_send`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
